2019xcordef JACM \eqd

--- a/2019xcordef/JACM/formatting.sty
+++ b/2019xcordef/JACM/formatting.sty
@@ -38,27 +38,14 @@
 \newcommand{\prefp} [1]{{\prettyref{#1} {\scriptsize page}~\pageref{#1}}}       % prefixed reference with page number
 \newcommand{\prefpp}[1]{{\prettyref{#1} (page~\pageref{#1})}}                   % prefixed reference with (page number)
 \newcommand{\prefpo}[1]{{page~\pageref{#1}}}                                    % reference page number
-\newcommand{\xrefP} [1]{(\prettyref{#1} page~\pageref{#1})}  % prefixed reference with page number
-%\newcommand{\xrefr} [1]{{\sffamily\addfontfeatures{Scale=0.71}(\prettyref{#1})}}% prefixed reference without page number
-%\newcommand{\xrefnp} [1]{{\sffamily\addfontfeatures{Scale=0.71}\prettyref{#1} page~\pageref{#1}}}  % xref with no parentheses
-%\newcommand{\xxref} [2]{{\sffamily\addfontfeatures{Scale=0.71}(\prettyref{#1} page~\pageref{#1}, \prettyref{#2} page~\pageref{#2})}}  % 2 prefixed references with page numbers
-%\newcommand{\xxrefnp} [2]{{\sffamily\addfontfeatures{Scale=0.71}\prettyref{#1} page~\pageref{#1}, \prettyref{#2} page~\pageref{#2}}}  % xxref with no parenthesis
-%\newcommand{\xxxref}[3]{{\sffamily\addfontfeatures{Scale=0.71}(\prettyref{#1} page~\pageref{#1}, \prettyref{#2} page~\pageref{#2}, \prettyref{#3} page~\pageref{#3})}}  % 3 prefixed references with page numbers
-%\newcommand{\xrefn} [1]{{\sffamily\addfontfeatures{Scale=0.71}(\prettyref{#1})}}% prefixed reference with no page number
-%\newcommand{\xrefp} [1]{{\sffamily\addfontfeatures{Scale=0.71}\prettyref{#1} page~\pageref{#1}}}  % prefixed reference with page number
-%\newcommand{\xrefpo} [1]{{\sffamily\addfontfeatures{Scale=0.71}(page~\pageref{#1})}}  % reference with page number only
-\newcommand{\xref}  [1]{\xrefP{#1}}
+\newcommand{\xref} [1]{{\footnotesize(\prettyref{#1} page~\pageref{#1})}}  % prefixed reference with page number
+%\newcommand{\xref}  [1]{\xrefP{#1}}
 \newcommand{\thm} [1]{#1}
 \newcommand{\thmd}[1]{#1}
 \newcommand{\leme}[1]{\emph{#1}}
 \newcommand{\lem} [1]{#1}
 \newcommand{\lemd}[1]{#1}
 
-
-%\newcommand{\pref}     [1]{\cite{#1}}
-%\newcommand{\prefp}    [1]{\cite{#1}}
-%\newcommand{\prefpp}   [1]{\cite{#1}}
- 
 \newcommand{\ds}{\displaystyle}
 \newcommand{\brp}[1]{{\left(#1\right)}}       % bracket with parenthesis
 \newcommand{\brs}[1]{{\left[#1\right]}}       % bracket with square brackets
@@ -159,5 +146,3 @@
 \newcommand{\citetbl}[1]{{#1}}
 
 \bibliographystyle{plainnat}% natbib package Harvard plain style
-%\setcitestyle{numbers, square, comma }
-
