--- a/2019xcordef/JACM/xcordef.tex
+++ b/2019xcordef/JACM/xcordef.tex
@@ -11,8 +11,7 @@ Here is a very limited overview of definitions of $\Rxy(m)$ in the literature:
   \mc{5}{l}{References that put the conjugate $\conj$ on $\rvy$:}
   \\&\citerpg{papoulis1984}{263}{0070484686} & R_{xy}(m) &\eqd& E\brb{\rvx(m)\rvy^\ast(0)}
   \\&\citerpg{cadzow}{341}{0023180102}       & r_{xy}(m) &\eqd& E\brs{\rvx(m)\rvy^\ast(0)}
-  \\&\citeP{matlab_cpsd},\citeP{matlab_xcorr}& R_{xy}(m) &\eqd& E\setn{x_{n+m}y_n^\ast}
- %\\&                     & R_{xy}(m) &\eqd& E\setn{x_{n+m}y_n^\ast}
+  \\&\citeP{matlab_cpsd, matlab_xcorr}       & R_{xy}(m) &\eqd& E\setn{x_{n+m}y_n^\ast}
   \\
   \mc{5}{l}{References that put the conjugate $\conj$ on $\rvx$:}
   \\&\citerpg{kay1988}{52}{8131733564}                    & r_{xy}[m] &\eqd& \mathcal{E}\brb{x^\ast[0]y[m]}
