2019xcordef JACM sty folder

--- a/2019xcordef/JACM/main.tex
+++ b/2019xcordef/JACM/main.tex
@@ -4,10 +4,10 @@
 %============================================================================
 
  \documentclass{article}
- \usepackage{packages}
- \usepackage{theorems}
- \usepackage{symbols}
- \usepackage{formatting}
+ \usepackage{sty/packages}
+ \usepackage{sty/theorems}
+ \usepackage{sty/symbols}
+ \usepackage{sty/formatting}
 
 %---------------------------------------
 % Title
