--- a/2019xcordef/JACM/main.tex
+++ b/2019xcordef/JACM/main.tex
@@ -26,27 +26,27 @@
 %---------------------------------------
 \begin{document}
   \maketitle
-  \input{abstract.tex}
-  \input{intro.tex}
-  \input{xcordef.tex}
-  \input{xcor_xyreal.tex}
-  \input{case_studies.tex}
-    \input{case_addnoise.tex}
-    \input{case_dual_noise.tex}
-    \input{case_parallel_ops.tex}
-    \input{case_operator_mnoise.tex}
-    \input{case_dual_mnoise.tex}
-    \input{case_systemid_nonlinear.tex}
-  \input{evaluation.tex}
+  \input{src/abstract.tex}
+  \input{src/intro.tex}
+  \input{src/xcordef.tex}
+  \input{src/xcor_xyreal.tex}
+  \input{src/case_studies.tex}
+    \input{src/case_addnoise.tex}
+    \input{src/case_dual_noise.tex}
+    \input{src/case_parallel_ops.tex}
+    \input{src/case_operator_mnoise.tex}
+    \input{src/case_dual_mnoise.tex}
+    \input{src/case_systemid_nonlinear.tex}
+  \input{src/evaluation.tex}
 %---------------------------------------
 % Appendices
 %---------------------------------------
 \begin{appendices}
 \section{Random Sequences}
-  \input{expectation.tex}
-  \input{randseq.tex}
-  \input{dsp.tex}
-  \input{normalg.tex}
+  \input{src/expectation.tex}
+  \input{src/randseq.tex}
+  \input{src/dsp.tex}
+  \input{src/normalg.tex}
 \end{appendices}
 %---------------------------------------
 % Bibliography: main.bbl
