2019xcordef JACM submit zip file

--- a/2019xcordef/JACM/sty/formatting.sty
+++ b/2019xcordef/JACM/sty/formatting.sty
@@ -7,6 +7,9 @@
 \newcommand{\tw}{\textwidth}
 \newcommand{\scs}{\scriptsize}%
 \newcommand{\scy}{\scriptstyle}%
+\newcommand{\imark}{$\bullet$}
+\newcommand{\imarks}{$\bullet\;$}
+
 \newcommand{\indentx}{\ensuremath{\mbox{}\qquad}}%
 \newcommand{\citerpgc}[4]{\citep[page #2]{#1}}
 \newcommand{\citerpg}[3]{\citep[page #2]{#1}}
@@ -16,12 +19,14 @@
 \newcommand{\citerppg} [4]{\citep[\href{http://books.google.com/books?vid=ISBN#4\&pg=PA#2}{pages~#2--#3}]{#1}}
 \newcommand{\citerppgc}[5]{\citep[\href{http://books.google.com/books?vid=ISBN#4\&pg=PA#2}{pages~#2--#3}]{#1}}
 
-\newcommand{\defbox}[1]{\mbox{}\\$\displaystyle#1$\\}
-\newcommand{\lembox}[1]{\mbox{}\\$\displaystyle#1$\\}
-\newcommand{\propbox}[1]{\mbox{}\\$\displaystyle#1$\\}
-\newcommand{\thmbox}[1]{\mbox{}\\$\displaystyle#1$\\}
-\newcommand{\corbox}[1]{\mbox{}\\$\displaystyle#1$\\}
-\newcommand{\rembox}[1]{\mbox{}\\$\displaystyle#1$\\}
+\newcommand{\formbox}[1]{\mbox{}\\$\boxed{\displaystyle#1}$\\}
+\newcommand{\defbox} [1]{\formbox{#1}}
+\newcommand{\lembox} [1]{\formbox{#1}}
+\newcommand{\propbox}[1]{\formbox{#1}}
+\newcommand{\thmbox} [1]{\formbox{#1}}
+\newcommand{\corbox} [1]{\formbox{#1}}
+\newcommand{\rembox} [1]{\formbox{#1}}
+
 \newcommand{\mcom}[2]{{\displaystyle\underbrace{\displaystyle#1}_{\text{\scriptsize{#2}}}}}%
 \newcommand{\ocom}[2]{{\displaystyle\overbrace{\displaystyle#1}^{\text{\scriptsize{#2}}}}}%
 \newcommand{\mc}[3]{\multicolumn{#1}{#2}{#3}}
@@ -31,8 +36,15 @@
 \newcommand{\indxs}[1]{\index[xsym]{\ensuremath{#1}}}
 
 \newcommand{\prope}  [1]{\emph{#1}}
+\newcommand{\propb}  [1]{\textbf{#1}}
+\newcommand{\propd}  [1]{\textbf{#1}}
 \newcommand{\structe}[1]{\emph{#1}}
 \newcommand{\structd}[1]{\textbf{#1}}
+\newcommand{\fncte}  [1]{\emph{#1}}
+\newcommand{\fnctd}  [1]{\textbf{#1}}
+\newcommand{\thme}   [1]{\emph{#1}}
+\newcommand{\ope}[1]{\emph{#1}}
+\newcommand{\opd}[1]{\emph{#1}}
 
 \newcommand{\pref}  [1]{{\prettyref{#1}}}                                       % prefixed reference
 \newcommand{\prefp} [1]{{\prettyref{#1} {\scriptsize page}~\pageref{#1}}}       % prefixed reference with page number
@@ -144,5 +156,8 @@
    \newrefformat{rem}  {Remark~\ref{#1}}
 
 \newcommand{\citetbl}[1]{{#1}}
+\renewcommand{\CancelColor}{\color{red}} % color of cancellation marks
+\setlength{\parindent}{0pt}%
+\setlength{\parskip}{1em}%
 
 \bibliographystyle{plainnat}% natbib package Harvard plain style
