--- a/2019xcordef/JACM/sty/packages.sty
+++ b/2019xcordef/JACM/sty/packages.sty
@@ -11,11 +11,11 @@
 \usepackage{longtable}                   % tables spanning multiple pages
 \usepackage{calc}                        % calculation
 \usepackage{cancel}                      % allows diagonal cancelation
-\renewcommand{\CancelColor}{\color{red}} % color of cancellation marks
 \usepackage{slashed}                     % useful for overlapping math symbols: \declareslashed
 \usepackage{mathtools}
 \usepackage{xfrac}
 \usepackage{hyperref}
+\usepackage{stmaryrd}
 \usepackage{geometry}
 \usepackage{prettyref}
 \usepackage[title]{appendix}
