--- a/common/randvar.tex
+++ b/common/randvar.tex
@@ -15,16 +15,16 @@
 \label{prop:cdf_uniform}
 %---------------------------------------
 Let $\ps$ be a probability space, and $\rvX$ a \fncte{random variable}
-with \fncte{cumulative distribution function} $\pcx(x)$.
+with \fncte{cumulative distribution function} $\pcx(x)$ \xref{def:cdf}.
 \propbox{
   \brb{\begin{array}{M}
     $\rvX$ is \prope{uniformly distributed}\\
     \xref{def:uniform}
   \end{array}}
   \iff
-  \pcx(x) = \brb{\begin{array}{cM}
+  \pcx(x) = \brbl{\begin{array}{cM}
                    0   & for $x<0$\\
-                   x   & for $0< x \le 1$ \\
+                   x   & for $0\le x \le 1$ \\
                    1   & otherwise
             \end{array}}
   }
@@ -40,7 +40,8 @@ with \fncte{cumulative distribution function} $\pcx(x)$.
 \label{thm:pit}
 %---------------------------------------
 Let $\ps$ be a probability space.
-Let $\rvX$ be a \fncte{random variable} with \fncte{probability density function} $\ppx(x)$ and \fncte{cumulative distribution function} $\pcx(x)$.
+Let $\rvX$ be a \fncte{random variable} with \fncte{probability density function} $\ppx(x)$ \xref{def:pdf}
+and \fncte{cumulative distribution function} $\pcx(x)$.
 Let $\rvY$ be a \fncte{random variable} \fncte{cumulative distribution function} $\pcy(y)$.
 \thmbox{
   \brb{\begin{array}{FMD}
@@ -72,7 +73,82 @@ Let $\rvY$ be a \fncte{random variable} \fncte{cumulative distribution function}
 \end{proof}
 
 %---------------------------------------
-\begin{theorem}[\thmd{Inverse probability integral transform}] %[\thmd{Inverse transform sampling}]
+\begin{example}
+\label{ex:pit}
+%---------------------------------------
+\exboxt{
+\begin{minipage}{\tw-55mm}
+Let $\rvX$ be a random variable with \fncte{pdf} \xref{def:pdf} $\ppx(x)$ where
+$\ppx(x)$ is the triangle-like \fncte{first order B-spline} $\fN_1(x)$ \xref{ex:bspline_N1}.
+%(a triangle-like function with height=1, peak at $x=1$, and support $x\in\intcc{0}{2}$).
+Then the random variable $\rvY\eqd\pcx(\rvX)$ has \prope{uniform distribution} \xref{def:uniform} where
+$\pcx(x)$ is the \fncte{cdf} \xref{def:cdf} of $\rvX$.
+\end{minipage}%
+\tbox{\includegraphics{../common/math/graphics/pdfs/n1.pdf}}%
+}
+\\\indentx$\ds
+\pcx(x) = \brbl{\begin{array}{r@{}lM}
+                   &0                      & for $    x \le 0$\\
+                   &\frac{1}{2}x^2         & for $0 < x \le 1$\\
+                  -&\frac{1}{2}x^2 +2x - 1 & for $1 < x \le 2$\\
+                   &1                      & for $    x >   2$
+                \end{array}}
+$
+\\Here is some R code if you want to try out the concept on the lab bench:\footnotemark\\
+\footnotetext{Note: To understand why $\rvX\eqd\rvX1+\rvX2$ has triangle distribution $\fN_1(x)$,
+see \exme{Sum of Uniformly Distributed Random Variables} \prefp{ex:pdf_uniform_sums}.}
+\begin{lstlisting}[language=R]
+N  = 1e6                               # N = number of samples
+X1 = runif( n=N, min=0, max=1 )        # X1 has uniform distribution
+X2 = runif( n=N, min=0, max=1 )        # X2 has uniform distribution
+X  = X1 + X2                           # X  has triangular distribution N1(x)
+Y  = ifelse( X<1, X^2/2, -X^2/2+2*Y-1) # Y = cdf_x( X ) has uniform distribution
+plot( density( Y, bw="SJ" ), lwd=3, xlim=c(0,4), col="blue" )
+\end{lstlisting}
+\end{example}
+\begin{proof}
+\begin{align*}
+  \pcx(x)
+    &\eqd \int_{-\infty}^x \ppx(u) \du
+    && \text{by definition of $\pcx(x)$ \xref{def:cdf}}
+  \\&\eqd \int_{-\infty}^x \fN_1(u) \du
+    && \text{by definition of $\ppx(x)$}
+  \\&= \int_{-\infty}^x
+         \brb{\begin{array}{r@{}lM}
+            &u     & for $u\in\intcc{0}{1}$\\
+           -&u + 2 & for $u\in\intoc{1}{2}$\\
+            &0     & otherwise
+         \end{array}} \du
+    && \text{by definition of $\fN_1(x)$ \xref{ex:bspline_N1}}
+  \\&= \brbl{\begin{array}{>{\ds}lM}
+         0                   & for $    x \le 0$\\
+         \int_0^x  u     \du & for $0 < x \le 1$\\
+         \int_1^x -u + 2 \du & for $1 < x \le 2$\\
+         1                   & for $    x >   2$  
+       \end{array}}
+   && = \brbl{\begin{array}{>{\ds}lM}
+                0                                           & for $    x \le 0$\\
+                \brs{\frac{1}{2}u^2}_0^x                    & for $0 < x \le 1$\\
+                \frac{1}{2} + \brs{-\frac{1}{2}u^2 +2u}_1^x & for $1 < x \le 2$\\
+                1                                           & for $    x >   2$  
+              \end{array}}
+  \\& = \brbl{\begin{array}{lM}
+                0                                                                   & for $    x \le 0$\\
+                \frac{1}{2}x^2 - \frac{1}{2}0^2                                     & for $0 < x \le 1$\\
+                \frac{1}{2} + \brp{-\frac{1}{2}x^2 +2x} - \brp{-\frac{1}{2}1^2 + 2} & for $1 < x \le 2$\\
+                1                                                                   & for $    x >   2$  
+              \end{array}}
+   && = \brbl{\begin{array}{r@{}lM}
+                &0                       & for $    x \le 0$\\
+                &\frac{1}{2}x^2          & for $0 < x \le 1$\\
+               -&\frac{1}{2}x^2 +2x - 1  & for $1 < x \le 2$\\
+                &1                       & for $    x >   2$  
+              \end{array}}
+\end{align*}
+\end{proof}
+
+%---------------------------------------
+\begin{theorem}[\thmd{Inverse probability integral transform}]
 \footnote{
   \citerpgc{devroye1986}{28}{0387963057}{Theorem 2.1},
   \citerpgc{balakrishnan2009}{624}{0387096140}{14.2.1 Introduction}
@@ -170,10 +246,11 @@ Let $\rvY$ be a \fncte{random variable} \fncte{cumulative distribution function}
 
 %---------------------------------------
 \begin{example}
+\label{ex:ppy_2x1}
 %---------------------------------------
 Suppose we have a random generator that yields a value $\rvX$ with
 \prope{uniform distribution}.
-Design a function $\ff(x)$ such that $\rvY\eqd\ff(\rvX)$ has distribution
+Choose a function $\ff(x)$ such that $\rvY\eqd\ff(\rvX)$ has distribution
 \\\indentx$\ds\ppy(y) \eqd \brbl{\begin{array}{lM}
                               \frac{1}{2} & for $y\in\intoc{1}{3}$\\
                               0           & otherwise
@@ -226,6 +303,10 @@ plot( density( Y, bw="SJ" ), lwd=3, xlim=c(0,4), col="blue" ) # plot estimated p
 
   \item By the \thme{Inverse probability integral transform} \xref{thm:its}, $\rvY\eqd\ff(\rvX)\eqd 2\rvX + 1$ has the
         desired pdf $\ppy(y)$.
+
+  \item Note: For an alternative proof using \prefpp{cor:YaXb}
+              rather than the \thme{Inverse probability integral transform} \xref{thm:its},
+              see \prefpp{ex:ppy_2x1b}.
 \end{enumerate}
 \end{proof}
 
@@ -390,8 +471,9 @@ Let $a,b\in\R$.
   \end{array}}
   \implies
   \brb{
-  \ppy(y) = \frac{1}{\abs{a}} \ppx\brp{\frac{y-b}{a}}}
-  }
+  \ppy(y) = \mcom{\frac{1}{\abs{a}} \ppx\brp{\frac{y-b}{a}}}
+                 {\ope{Dilation} by $a$ and \ope{Translation} by $b$}
+  }}
 \end{corollary}
 \begin{proof}
 %\begin{enumerate}
@@ -439,6 +521,40 @@ Let $a,b\in\R$.
 %\end{enumerate}
 \end{proof}
 
+%---------------------------------------
+\begin{example}
+\label{ex:ppy_2x1b}
+%---------------------------------------
+Revisit \prefpp{ex:ppy_2x1}, but this time using \prefpp{cor:YaXb}
+rather than the \thme{Inverse probability integral transform} \xref{thm:its}:
+Suppose we have a random generator that yields a value $\rvX$ with
+\prope{uniform distribution}.
+Choose a function $\ff(x)$ such that $\rvY\eqd\ff(\rvX)$ has distribution
+\\\indentx$\ds\ppy(y) \eqd \brbl{\begin{array}{lM}
+                              \frac{1}{2} & for $y\in\intoc{1}{3}$\\
+                              0           & otherwise
+                            \end{array}}$
+\exbox{
+  \ff(x) \eqd 2x + 1
+  \qquad\implies\qquad
+  \rvY \eqd \ff(\rvX)\qquad\text{has distribution $\ppy(y)$}
+}
+\end{example}
+\begin{proof}
+\begin{align*}
+  \ppy(y)
+    &\eqd \brbl{\begin{array}{lM}
+                  \frac{1}{2} & for $y\in\intoc{1}{3}$\\
+                  0           & otherwise
+                \end{array}}
+  \\&= \frac{1}{2} \ppx\brp{\frac{x-1}{2}}
+    && \text{by definition of \fncte{uniform distribution}}
+    && \text{\xref{def:uniform}}
+  \\\implies \ff(x)
+     &= 2x + 1
+    && \text{by \prefp{cor:YaXb}}
+\end{align*}
+\end{proof}
 
 \begin{figure}\color{figcolor}
 \setlength{\unitlength}{0.3mm}
@@ -1078,7 +1194,7 @@ we just have to determine the mean and variance of $\rvZ$.
            \xref{ex:pdf_uniform_sums}}
 \end{figure}
 %---------------------------------------
-\begin{example}
+\begin{example}[\exmd{Sum of Uniformly Distributed Random Variables}]
 \label{ex:pdf_uniform_sums}
 %---------------------------------------
 Let $\seqn{\rvX_1, \rvX_2, \rvX_3, \ldots}$ be a \fncte{sequence}
