--- a/common/spline.tex
+++ b/common/spline.tex
@@ -1523,7 +1523,7 @@ is illustrated to the right.
 \begin{example}
 %-------------------------------------
   The \ope{Fourier transform magnitude} $\abs{\brs{\opFT\fN_1}(\omega)}$ of the 
-  \fncte{1st order B-spline} $\fN_1(x)$
+  \fncte{1st order B-spline} $\fN_1(x)$ \xref{ex:bspline_N1}
   is illustrated to the right.
 \end{example}
 \end{minipage}%
