cdf plot for probability integral transform example

--- a/common/randvar.tex
+++ b/common/randvar.tex
@@ -77,7 +77,7 @@ Let $\rvY$ be a \fncte{random variable} \fncte{cumulative distribution function}
 \label{ex:pit}
 %---------------------------------------
 \exboxt{
-\begin{minipage}{\tw-55mm}
+\begin{minipage}{\tw-60mm}
 Let $\rvX$ be a random variable with \fncte{pdf} \xref{def:pdf} $\ppx(x)$ where
 $\ppx(x)$ is the triangle-like \fncte{first order B-spline} $\fN_1(x)$ \xref{ex:bspline_N1}.
 %(a triangle-like function with height=1, peak at $x=1$, and support $x\in\intcc{0}{2}$).
@@ -93,7 +93,7 @@ $\pcx(x)$ is the \fncte{cdf} \xref{def:cdf} of $\rvX$.
                   -&\frac{1}{2}x^2 +2x - 1 & for $1 < x \le 2$\\
                    &1                      & for $    x >   2$
                 \end{array}}
-$
+$\qquad\tbox{\includegraphics{../common/math/graphics/pdfs/n1_int.pdf}}%
 \\Here is some R code if you want to try out the concept on the lab bench:\footnotemark\\
 \footnotetext{Note: To understand why $\rvX\eqd\rvX1+\rvX2$ has triangle distribution $\fN_1(x)$,
 see \exme{Sum of Uniformly Distributed Random Variables} \prefp{ex:pdf_uniform_sums}.}
