--- a/common/math/graphics/bsplines/n1_int.tex
+++ b/common/math/graphics/bsplines/n1_int.tex
@@ -1,7 +1,7 @@
 %============================================================================
 % Daniel J. Greenhoe
 % LaTeX file
-% N_3(x) B-spline
+% Integral of N_1(x) B-spline from -infty to x
 % nominal unit = 10mm
 %============================================================================
 \begin{pspicture}(-1.5,-0.5)(3,1.5)
@@ -24,10 +24,10 @@
   %-------------------------------------
   % function plot
   %-------------------------------------
-  \psplot{-1}{0}{0 }% for 0<=x<=1 
-  \psplot{0}{1}{ 0.5 x mul x mul }% for 1<=x<=2 
-  \psplot{1}{2}{ -0.5 x mul x mul 2 x mul add -1 add }
-  \psplot{2}{3}{ 1 }
-  %\psline(0,0)(-0.5,0)\psline[linestyle=dotted](-0.5,0)(-0.75,0)%              % for x<=0
-  %\psline(4,0)(4.5,0)\psline[linestyle=dotted](4.5,0)(4.75,0)%                 % for x>=4
+  \psline(0,0)(-1,0)%                                    for      x <  0
+  \psline[linestyle=dotted](-1,0)(-1.25,0)%
+  \psplot{ 0}{1}{ 0.5 x mul x mul }%                     for 0 <= x <= 1
+  \psplot{ 1}{2}{ -0.5 x mul x mul 2 x mul add -1 add }% for 1 <= x <= 2
+  \psline(2,1)(2.5,1)%                                   for      x  > 2
+  \psline[linestyle=dotted](2.5,1)(2.75,1)%
 \end{pspicture}%
