--- a/common/randvar.tex
+++ b/common/randvar.tex
@@ -124,25 +124,25 @@ plot( density( Y, bw="SJ" ), lwd=3, xlim=c(0,4), col="blue" ) # plot estimated p
          0                   & for $    x \le 0$\\
          \int_0^x  u     \du & for $0 < x \le 1$\\
          \int_1^x -u + 2 \du & for $1 < x \le 2$\\
-         1                   & for $    x >   2$  
+         1                   & for $    x >   2$
        \end{array}}
    && = \brbl{\begin{array}{>{\ds}lM}
                 0                                           & for $    x \le 0$\\
                 \brs{\frac{1}{2}u^2}_0^x                    & for $0 < x \le 1$\\
                 \frac{1}{2} + \brs{-\frac{1}{2}u^2 +2u}_1^x & for $1 < x \le 2$\\
-                1                                           & for $    x >   2$  
+                1                                           & for $    x >   2$
               \end{array}}
   \\& = \brbl{\begin{array}{lM}
                 0                                                                   & for $    x \le 0$\\
                 \frac{1}{2}x^2 - \frac{1}{2}0^2                                     & for $0 < x \le 1$\\
                 \frac{1}{2} + \brp{-\frac{1}{2}x^2 +2x} - \brp{-\frac{1}{2}1^2 + 2} & for $1 < x \le 2$\\
-                1                                                                   & for $    x >   2$  
+                1                                                                   & for $    x >   2$
               \end{array}}
    && = \brbl{\begin{array}{r@{}lM}
                 &0                       & for $    x \le 0$\\
                 &\frac{1}{2}x^2          & for $0 < x \le 1$\\
                -&\frac{1}{2}x^2 +2x - 1  & for $1 < x \le 2$\\
-                &1                       & for $    x >   2$  
+                &1                       & for $    x >   2$
               \end{array}}
 \end{align*}
 \end{proof}
@@ -315,25 +315,38 @@ plot( density( Y, bw="SJ" ), lwd=3, xlim=c(0,4), col="blue" ) # plot estimated p
 \label{ex:ppy_N1}
 %---------------------------------------
 Let $\rvX$ be a \fncte{random variable} with \prope{uniform distribution}.
-Select a function $\ff(x)$ such that $\rvY\eqd\ff(\rvX)$ has distribution $\fN_1(x)$ 
+Select a function $\ff(x)$ such that $\rvY\eqd\ff(\rvX)$ has distribution $\fN_1(x)$
 as defined in \prefp{ex:pit} (triangle-like 1st order B-spline).
 \exbox{
-  \ff(x) \eqd \brb{\begin{array}{lM}
-                \sqrt{2x}         & for $x\in\intoc{0}{\frac{1}{2}}$\\
-                2 - \sqrt{2(1-x)} & for $x\in\intcc{\frac{1}{2}}{1}$
-              \end{array}}
-  \qquad\implies\qquad
-  \rvY \eqd \ff(\rvX)\qquad\text{has distribution $\fN_1(x)$}
+  \begin{minipage}{\tw-42mm}
+    $\ds
+      \brs{\begin{array}{rcl}
+        \ff(x) &\eqd& \brbl{\begin{array}{lM}
+                             \sqrt{2x}         & for $x\in\intcc{0}{\frac{1}{2}}$\\
+                             2 - \sqrt{2(1-x)} & for $x\in\intcc{\frac{1}{2}}{1}$\\
+                             \text{undefined}  & otherwise
+                           \end{array}}
+      \end{array}}
+      \quad\implies\quad
+      \brs{\begin{array}{M}
+        $\rvY \eqd \ff(\rvX)$\\
+        has \fncte{pdf}\\
+        $\fN_1(x)$
+      \end{array}}
+    $
+  \end{minipage}
+  \tbox{\includegraphics{../common/math/graphics/pdfs/n1_int_inverse.pdf}}%
+  \ff(x)
 }
-%\\
-%Moreover, here's some R code demonstrating the concept:
-%\begin{lstlisting}[language=R]
-%N = 1e6                                                       # Number of samples
-%X = runif( n=N, min=0, max=1 )                                # X = Uniformly distributed RV
-%Y = 2 * X + 1                                                 # Y = f( X )
-%plot( X, Y, ylim=c(0,3), col="red" )                          # plot X -> Y mapping
-%plot( density( Y, bw="SJ" ), lwd=3, xlim=c(0,4), col="blue" ) # plot estimated pdf of Y
-%\end{lstlisting}
+\\
+Here's some R code demonstrating the concept (the ``blue" plot should look approximately like $\fN_1(x)$):
+\begin{lstlisting}[language=R]
+N = 1e6                                                       # Number of samples
+X = runif( n=N, min=0, max=1 )                                # X = Uniformly distributed RV
+Y = ifelse( X<0.5, sqrt(2*X), (2-sqrt(2*(1-X))) )             # Y = f( X )
+plot( X, Y, col="red" )                                       # plot X -> Y mapping
+plot( density( Y, bw="SJ" ), lwd=3, xlim=c(0,4), col="blue" ) # plot estimated pdf of Y
+\end{lstlisting}
 \end{example}
 \begin{proof}
 \begin{enumerate}
@@ -349,7 +362,7 @@ as defined in \prefp{ex:pit} (triangle-like 1st order B-spline).
     \end{align*}
   \item Taking (1) and (2) above and the fact that the \fncte{cdf} is always \prope{non-negative}, we have
     \begin{align*}
-      \ff(x) \eqd \pcx^{-1}(x) 
+      \ff(x) \eqd \pcx^{-1}(x)
         &= \brbl{\begin{array}{lM}
                   \sqrt{2x}         & for $x\in\intoc{0}{\frac{1}{2}}$\\
                   2 - \sqrt{2(1-x)} & for $x\in\intcc{\frac{1}{2}}{1}$
