--- a/common/randvar.tex
+++ b/common/randvar.tex
@@ -309,15 +309,34 @@ plot( density( Y, bw="SJ" ), lwd=3, xlim=c(0,4), col="blue" ) # plot estimated p
 \end{enumerate}
 \end{proof}
 
-
+\begin{figure}
+\centering
+$\ds\begin{array}{|ccccc|}
+  \hline
+  \boxed{\tbox{\includegraphics{../common/math/graphics/pdfs/n0.pdf}}}
+  &\quad\rightarrow\quad&
+  \boxed{\tbox{\includegraphics{../common/math/graphics/pdfs/n1_int_inverse.pdf}}}
+  &\quad\rightarrow\quad&
+  \boxed{\tbox{\includegraphics{../common/math/graphics/pdfs/n1.pdf}}}
+  \\
+  \text{\fncte{pdf} $\ppx(x)$ of $\rvX$}
+  &&
+  \ff(x)
+  &&
+  \text{\fncte{pdf} $\ppy(x)$ of $\rvY\eqd\ff(\rvX)$}
+  \\\hline
+\end{array}$
+\caption{Flow diagram for \prefpp{ex:ppy_N1}\label{fig:ppy_N1}}
+\end{figure}
 %---------------------------------------
 \begin{example}
 \label{ex:ppy_N1}
 %---------------------------------------
 Let $\rvX$ be a \fncte{random variable} with \prope{uniform distribution}.
 Select a function $\ff(x)$ such that $\rvY\eqd\ff(\rvX)$ has distribution $\fN_1(x)$
-as defined in \prefp{ex:pit} (triangle-like 1st order B-spline).
+as defined in \prefp{ex:pit} (triangle-like 1st order B-spline). Then\ldots
 \exbox{
+  \tbox{\includegraphics{../common/math/graphics/pdfs/n1_int_inverse.pdf}}%
   \begin{minipage}{\tw-42mm}
     $\ds
       \brs{\begin{array}{rcl}
@@ -335,10 +354,8 @@ as defined in \prefp{ex:pit} (triangle-like 1st order B-spline).
       \end{array}}
     $
   \end{minipage}
-  \tbox{\includegraphics{../common/math/graphics/pdfs/n1_int_inverse.pdf}}%
-  \ff(x)
 }
-\\
+\\\ldots as illustrated in \prefpp{fig:ppy_N1}.
 Here's some R code demonstrating the concept (the ``blue" plot should look approximately like $\fN_1(x)$):
 \begin{lstlisting}[language=R]
 N = 1e6                                                       # Number of samples
