figure for N_1 to N_0 pdf transform

--- a/common/randvar.tex
+++ b/common/randvar.tex
@@ -72,6 +72,25 @@ Let $\rvY$ be a \fncte{random variable} \fncte{cumulative distribution function}
 \end{align*}
 \end{proof}
 
+\begin{figure}
+  \centering
+  $\ds\begin{array}{|ccccc|}
+    \hline
+    \boxed{\tbox{\includegraphics{../common/math/graphics/pdfs/n1.pdf}}}
+    &\quad\rightarrow\quad&
+    \boxed{\tbox{\includegraphics{../common/math/graphics/pdfs/n1_int.pdf}}}
+    &\quad\rightarrow\quad&
+    \boxed{\tbox{\includegraphics{../common/math/graphics/pdfs/n0.pdf}}}
+    \\
+    \text{\fncte{pdf} $\ppx(x)$ of $\rvX$}
+    &&
+    \ff(x)=\pcx(x)
+    &&
+    \text{\fncte{pdf} $\ppy(x)$ of $\rvY\eqd\ff(\rvX)$}
+    \\\hline
+  \end{array}$
+  \caption{Flow diagram for \prefpp{ex:pit}\label{fig:pit_N1}}
+\end{figure}
 %---------------------------------------
 \begin{example}
 \label{ex:pit}
@@ -94,7 +113,8 @@ $\pcx(x)$ is the \fncte{cdf} \xref{def:cdf} of $\rvX$.
                    &1                      & for $    x >   2$
                 \end{array}}
 $\qquad\tbox{\includegraphics{../common/math/graphics/pdfs/n1_int.pdf}}%
-\\Here is some R code if you want to try out the concept on the lab bench:\footnotemark
+\\See \prefpp{fig:pit_N1} for an illustration.
+Here is some R code if you want to try out the concept on the bench:\footnotemark
 \footnotetext{Note: To understand why $\rvX\eqd\rvX1+\rvX2$ has triangle distribution $\fN_1(x)$,
 see \exme{Sum of Uniformly Distributed Random Variables} \prefp{ex:pdf_uniform_sums}.}
 \begin{lstlisting}[language=R]
@@ -310,23 +330,23 @@ plot( density( Y, bw="SJ" ), lwd=3, xlim=c(0,4), col="blue" ) # plot estimated p
 \end{proof}
 
 \begin{figure}
-\centering
-$\ds\begin{array}{|ccccc|}
-  \hline
-  \boxed{\tbox{\includegraphics{../common/math/graphics/pdfs/n0.pdf}}}
-  &\quad\rightarrow\quad&
-  \boxed{\tbox{\includegraphics{../common/math/graphics/pdfs/n1_int_inverse.pdf}}}
-  &\quad\rightarrow\quad&
-  \boxed{\tbox{\includegraphics{../common/math/graphics/pdfs/n1.pdf}}}
-  \\
-  \text{\fncte{pdf} $\ppx(x)$ of $\rvX$}
-  &&
-  \ff(x)
-  &&
-  \text{\fncte{pdf} $\ppy(x)$ of $\rvY\eqd\ff(\rvX)$}
-  \\\hline
-\end{array}$
-\caption{Flow diagram for \prefpp{ex:ppy_N1}\label{fig:ppy_N1}}
+  \centering
+  $\ds\begin{array}{|ccccc|}
+    \hline
+    \boxed{\tbox{\includegraphics{../common/math/graphics/pdfs/n0.pdf}}}
+    &\quad\rightarrow\quad&
+    \boxed{\tbox{\includegraphics{../common/math/graphics/pdfs/n1_int_inverse.pdf}}}
+    &\quad\rightarrow\quad&
+    \boxed{\tbox{\includegraphics{../common/math/graphics/pdfs/n1.pdf}}}
+    \\
+    \text{\fncte{pdf} $\ppx(x)$ of $\rvX$}
+    &&
+    \ff(x)=\pcy^{-1}(x)
+    &&
+    \text{\fncte{pdf} $\ppy(x)$ of $\rvY\eqd\ff(\rvX)$}
+    \\\hline
+  \end{array}$
+  \caption{Flow diagram for \prefpp{ex:ppy_N1}\label{fig:ppy_N1}}
 \end{figure}
 %---------------------------------------
 \begin{example}
@@ -1222,7 +1242,7 @@ with covariance $\pvarxy$ on a
 \propbox{
   \brb{\begin{array}{FMD}
       (A).&$\rvX$ is \prope{Gaussian} with $\pN{\pmeanx}{\pvarx}$ & and
-    \\(B).&$\rvX$ is \prope{Gaussian} with $\pN{\pmeany}{\pvary}$ & and
+    \\(B).&$\rvY$ is \prope{Gaussian} with $\pN{\pmeany}{\pvary}$ & and
     \\(C).&$\pvarxy=\cov{\rvX}{\rvY}$
   \end{array}}
   \implies
