figures for 2X+1 and tan(Theta) examples

--- a/common/randvar.tex
+++ b/common/randvar.tex
@@ -264,6 +264,25 @@ Let $\rvY$ be a \fncte{random variable} \fncte{cumulative distribution function}
   }
 \end{figure}
 
+\begin{figure}
+  \centering
+  $\ds\begin{array}{|ccccc|}
+    \hline
+    \boxed{\tbox{\includegraphics{../common/math/graphics/pdfs/n0.pdf}}}
+    &\quad\rightarrow\quad&
+    \boxed{\tbox{\includegraphics{../common/math/graphics/pdfs/n0_2x1_int_inverse.pdf}}}
+    &\quad\rightarrow\quad&
+    \boxed{\tbox{\includegraphics{../common/math/graphics/pdfs/n0_2x1.pdf}}}
+    \\
+    \text{\fncte{pdf} $\ppx(x)$ of $\rvX$}
+    &&
+    \ff(x)=\pcy^{-1}(x)
+    &&
+    \text{\fncte{pdf} $\ppy(x)$ of $\rvY\eqd\ff(\rvX)$}
+    \\\hline
+  \end{array}$
+  \caption{Flow diagram for \prefpp{ex:ppy_2x1}\label{fig:ppy_2x1}}
+\end{figure}
 %---------------------------------------
 \begin{example}
 \label{ex:ppy_2x1}
@@ -279,8 +298,8 @@ Select a function $\ff(x)$ such that $\rvY\eqd\ff(\rvX)$ has distribution
   \qquad\implies\qquad
   \rvY \eqd \ff(\rvX)\qquad\text{has distribution $\ppy(y)$}
 }
-\\
-Moreover, here's some R code demonstrating the concept:
+\\\ldots as illustrated in \prefpp{fig:ppy_2x1}.
+Here's some R code demonstrating the concept: % (the ``blue" plot should look approximately like $\fN_1(x)$):
 \begin{lstlisting}[language=R]
 N = 1e6                                                       # Number of samples
 X = runif( n=N, min=0, max=1 )                                # X = Uniformly distributed RV
@@ -825,7 +844,7 @@ Choose a function $\ff(x)$ such that $\rvY\eqd\ff(\rvX)$ has distribution
 \end{footnotesize}
 \end{center}
 \caption{
-  $\rvY=rvX^2$
+  $\rvY=\rvX^2$
   \label{fig:Y=rvX^2}
   }
 \end{figure}
@@ -906,44 +925,43 @@ Let $\rvX$ and $\rvY$ be \fncte{random variable}s.
 %\end{enumerate}
 \end{proof}
 
-
-
-
 \begin{figure}\color{figcolor}
-\setlength{\unitlength}{0.15mm}
-\thicklines
-\begin{center}
-\begin{footnotesize}
-\begin{picture}(1000,220)(-500,-100)
-  \put(-500,   0){\line(1,0){1000}}
-  \put(   0, -100){\line(0,1){220}}
-  \multiput(-400,0)(200,0){5}{
-    {\color{red}
-      \qbezier(0,0)(25,25)(50,37)
-      \qbezier(50,37)(75,50)(95,100)
-      \qbezier(0,0)(-25,-25)(-50,-37)
-      \qbezier(-50,-37)(-75,-50)(-95,-100)
-      }
-    \qbezier[14](77,0)(77,32)(77,64)
-    }
-  \put( 100, 105){\makebox(0,0)[b]{$z=\atan\theta$}}
-  \put(-400,-5){\makebox(0,0)[t]{$-2\pi$}}
-  \put(-200,-5){\makebox(0,0)[t]{$- \pi$}}
-  \put( 200,-5){\makebox(0,0)[t]{$  \pi$}}
-  \put( 400,-5){\makebox(0,0)[t]{$ 2\pi$}}
-
-  \put(-323,-5){\makebox(0,0)[t]{$\theta_{-2}$}}
-  \put(-123,-5){\makebox(0,0)[t]{$\theta_{-1}$}}
-  \put(  77,-5){\makebox(0,0)[t]{$\theta_{ 0}$}}
-  \put( 277,-5){\makebox(0,0)[t]{$\theta_{ 1}$}}
-  \put( 477,-5){\makebox(0,0)[t]{$\theta_{ 2}$}}
-
-  \qbezier[130](-315,64)(77,64)(477,64)
-  \put(   0, 110){\makebox(0,0)[r]{$z$}}
-  \put( 520,   0){\makebox(0,0)[l]{$\theta$}}
-\end{picture}
-\end{footnotesize}
-\end{center}
+  \centering
+  \boxed{\tbox{\includegraphics{../common/math/graphics/pdfs/tan.pdf}}}
+%\setlength{\unitlength}{0.15mm}
+%\thicklines
+%\begin{center}
+%\begin{footnotesize}
+%\begin{picture}(1000,220)(-500,-100)
+%  \put(-500,   0){\line(1,0){1000}}
+%  \put(   0, -100){\line(0,1){220}}
+%  \multiput(-400,0)(200,0){5}{
+%    {\color{red}
+%      \qbezier(0,0)(25,25)(50,37)
+%      \qbezier(50,37)(75,50)(95,100)
+%      \qbezier(0,0)(-25,-25)(-50,-37)
+%      \qbezier(-50,-37)(-75,-50)(-95,-100)
+%      }
+%    \qbezier[14](77,0)(77,32)(77,64)
+%    }
+%  \put( 100, 105){\makebox(0,0)[b]{$z=\atan\theta$}}
+%  \put(-400,-5){\makebox(0,0)[t]{$-2\pi$}}
+%  \put(-200,-5){\makebox(0,0)[t]{$- \pi$}}
+%  \put( 200,-5){\makebox(0,0)[t]{$  \pi$}}
+%  \put( 400,-5){\makebox(0,0)[t]{$ 2\pi$}}
+%
+%  \put(-323,-5){\makebox(0,0)[t]{$\theta_{-2}$}}
+%  \put(-123,-5){\makebox(0,0)[t]{$\theta_{-1}$}}
+%  \put(  77,-5){\makebox(0,0)[t]{$\theta_{ 0}$}}
+%  \put( 277,-5){\makebox(0,0)[t]{$\theta_{ 1}$}}
+%  \put( 477,-5){\makebox(0,0)[t]{$\theta_{ 2}$}}
+%
+%  \qbezier[130](-315,64)(77,64)(477,64)
+%  \put(   0, 110){\makebox(0,0)[r]{$z$}}
+%  \put( 520,   0){\makebox(0,0)[l]{$\theta$}}
+%\end{picture}
+%\end{footnotesize}
+%\end{center}
 \caption{
   $\rvZ=\tan\Theta$
   \label{fig:Z=tan0}
