--- a/common/math/graphics/bsplines/n0_2x1_int_inverse.tex
+++ b/common/math/graphics/bsplines/n0_2x1_int_inverse.tex
@@ -4,27 +4,24 @@
 % Inverse of Integral of N_1(x) B-spline from -infty to x
 % nominal unit = 10mm
 %============================================================================
-\begin{pspicture}(-0.5,-0.5)(1.5,2.5)
+\begin{pspicture}(-0.5,-0.5)(1.5,3.5)
   %-------------------------------------
   % parameters
   %-------------------------------------
-  \psset{plotpoints=64,labelsep=2pt}%
+  \psset{plotpoints=64,labelsep=1pt}%
   %-------------------------------------
   % axes
   %-------------------------------------
-  \psaxes[linewidth=0.75pt,linecolor=axis,yAxis=false,ticks=x,labels=x]{<->}(0,0)(-0.5,0)(1.5,2.5)% x axis
-  \psaxes[linewidth=0.75pt,linecolor=axis,xAxis=false,ticks=x,labels=x]{->}(0,0)(-0.5,0)(1.5,2.5)%  y axis
+  \psaxes[linewidth=0.75pt,linecolor=axis,yAxis=false,ticks=x,labels=x]{<->}(0,0)(-0.5,0)(1.5,3.5)% x axis
+  \psaxes[linewidth=0.75pt,linecolor=axis,xAxis=false,ticks=x,labels=x]{->}(0,0)(-0.5,0)(1.5,3.5)%  y axis
   %-------------------------------------
   % annotation
   %-------------------------------------
-  \psline[linestyle=dashed,linewidth=0.75pt,linecolor=red](0,1)(0.5,1)(0.5,0)%
-  \psline[linestyle=dashed,linewidth=0.75pt,linecolor=red](0,2)(1,2)(1,0)%
-  \uput[180](0,2){$2$}%
+  \psline[linestyle=dashed,linewidth=0.75pt,linecolor=red](0,3)(1,3)(1,0)%
+  \uput[180](0,3){$3$}%
   \uput[180](0,1){$1$}%
-  \uput[-90](0.5,0){$\sfrac{1}{2}$}%
   %-------------------------------------
   % function plot
   %-------------------------------------
-  \psplot{0.0}{0.5}{ 2 x mul sqrt }%             y = sqrt( 2x )     for 0   <= x <= 1/2
-  \psplot{0.5}{1.0}{ 2 2 1 x sub mul sqrt sub }% y = sqrt[2-2(1-x)] for 1/2 <= x <= 1
+  \psplot{-0.5}{1.25}{ 2 x mul 1 add }% y = 2x + 1
 \end{pspicture}%
