no {picture} environment generated images in randvar.tex

--- a/common/randvar.tex
+++ b/common/randvar.tex
@@ -209,61 +209,6 @@ Let $\rvY$ be a \fncte{random variable} \fncte{cumulative distribution function}
 \end{align*}
 \end{proof}
 
-\begin{figure}\color{figcolor}
-\setlength{\unitlength}{0.4mm}
-\thicklines
-\begin{center}
-\begin{footnotesize}
-\begin{picture}(250,150)(-100,-20)
-  {\color{axis}% axis
-    \put(-100,   0){\line(1,0){200}}%
-    \put(   0, -20){\line(0,1){120}}%
-    }
-  {\color{blue}% f(x)
-    \qbezier(-100,100)(0,-100)(100,100)%
-    \put( 100, 105){\makebox(0,0)[b]{$y=\ff(x)$}}%
-    }%
-  {\color{red}% dotted guide lines
-    \qbezier[8](-40,0)(-40,8)(-40,16)%
-    \qbezier[8](40,0)(40,8)(40,16)%
-    \qbezier[28](-80,0)(-80,32)(-80,64)%
-    \qbezier[28](80,0)(80,32)(80,64)%
-    \qbezier[64](-80,64)(0,64)(80,64)%
-    \qbezier[40](-40,16)(0,16)(40,16)%
-    }%
-  \put(   0, 110){\makebox(0,0)[r]{$y$}}
-  \put( 110,   0){\makebox(0,0)[r]{$x$}}
-  \put(  -5,  64){\makebox(0,0)[r]{$y+\varepsilon$}}
-  \put(  -5,  16){\makebox(0,0)[r]{$y$}}
-  \put( -40,  -5){\makebox(0,0)[t]{$\fgi_1(y)$}}
-  \put(  40,  -5){\makebox(0,0)[t]{$\fgi_2(y)$}}
-  \put( -80,  -5){\makebox(0,0)[t]{$\fgi_1(y+\varepsilon)$}}
-  \put(  80,  -5){\makebox(0,0)[t]{$\fgi_2(y+\varepsilon)$}}
-  \put(-100,  40){\makebox(0,0)[r]{$\left.\frac{\dy}{\dx}\right|_{x=\fgi_1(y)}$}}
-  \put( 100,  40){\makebox(0,0)[l]{$\left.\frac{\dy}{\dx}\right|_{x=\fgi_2(y)}$}}
-  \put(  95,  40){\vector(-1,0){35}}%
-  \put( -95,  40){\vector(1,0){35}}%
-  %\put(-100,  20){\makebox(0,0)[r]{$\fgi_1(y) + \left.\frac{\Delta y}{\dy/\dx}\right|_{x=\fgi_1(y)} = \fgi_1(y) + \frac{\varepsilon}{\ffp\brs{\fgi_1(y)}}$}}%
-  \put(-100,  20){\makebox(0,0)[r]{$\fgi_1(y) + \frac{\varepsilon}{\ffp\brs{\fgi_1(y)}}$}}%
-  \put( 100,  20){\makebox(0,0)[l]{$\fgi_2(y) + \left.\frac{\Delta y}{\dy/\dx}\right|_{x=\fgi_2(y)} = \fgi_2(y) + \frac{\varepsilon}{\ffp\brs{\fgi_2(y)}}$}}%
-  \put( -95,  15){\vector( 1,-1){15}}
-  \put(  95,  15){\vector(-1,-1){15}}
-  \put( -60,   0){$\setA_1$}%
-  \put(  60,   0){$\setA_2$}%
-  {\color{red}% slope lines
-    \put(  40,  16){\line(5,6){40}}%   %straight line
-    \put( -40,  16){\line(-5,6){40}}%   %straight line
-    }%
-  %{\color{green}\qbezier(40,16)(60,40)(80,64)}     %straight line
-\end{picture}
-\end{footnotesize}
-\end{center}
-\caption{
-  $\rvY=\ff(\rvX)$
-  \label{fig:YfX}
-  }
-\end{figure}
-
 \begin{figure}
   \centering
   $\ds\begin{array}{|ccccc|}
@@ -461,8 +406,7 @@ Let $\ff$ be a \structe{differentiable function} in $\clFrr$
 with $\xN$ \prope{critical point}s \xref{def:cp}.
 Let the range of $\rvX$ be partitioned into $\xN+1$ partitions
 $\set{\setA_n}{n=1,2,\ldots,\xN+1}$
-with partition boundaries set at the $\xN$ \structe{critical point}s of $\ff(x)$%
----as illustrated in \prefpp{fig:YfX}.
+with partition boundaries set at the $\xN$ \structe{critical point}s of $\ff(x)$.
 Let $\fg_n(x)\eqd\ff(x)$ but with domain restricted to $x\in\setA_n$.
 \thmbox{
   \brb{\begin{array}{FMD}
@@ -483,13 +427,6 @@ Let $\fg_n(x)\eqd\ff(x)$ but with domain restricted to $x\in\setA_n$.
         However, note that in each partition $\setA_n$, $\ff(x)$ is \prope{invertible} and thus
         $\ffi(y)$ in that partition has a \prope{unique} solution.
         Thus, each $\fg_n(x)$ \emph{is} \prop{invertible} in it's domain (and each $\fgi_n(y)$ exists as a function).
-
-  %\item lemma. \label{ilem:YfX_ffp}  \label{ilem:YfX_dygi}
-  %  \\\indentx$\ds
-  %    \lim_{\varepsilon\to0} \fgi_n(y+\varepsilon)
-  %       = \lim_{\varepsilon\to0}\brs{\fgi_n(y) + \left.\Delta y\frac{1}{\dy/\dx}\right|_{x=\fgi_n(y)}}
-  %       = \lim_{\varepsilon\to0}\brs{\fgi_n(y) + \frac{\varepsilon}{\ffp\brs{\fgi_n(y)}}}
-  %      $
 
   \item Using \pref{item:YfX_gn}, the remainder of the proof follows \ldots
     \begin{align*}
@@ -539,7 +476,6 @@ Let $\fg_n(x)\eqd\ff(x)$ but with domain restricted to $x\in\setA_n$.
       \\&= \sum_{n=1}^{\xN+1} \frac{\ppx\brp{\fgi_n(y)}}{\abs{\ffp\brp{\fgi_n(y)}}}
         && \text{by \prefp{lem:ddyffi}}
     \end{align*}
-
 \end{enumerate}
 \end{proof}
 
@@ -566,28 +502,25 @@ Let $a,b\in\R$.
   }}
 \end{corollary}
 \begin{proof}
-%\begin{enumerate}
-%  \item This follows from \prefpp{thm:YfX}:
-    \begin{enumerate}
-      \item \label{item:YaXb_ffp}
-            Note that $\ff(x)=ax+b$ is a \prope{differentiable function} with $\xN=0$ \prope{critical point}s
-            and $\ffp(x)=a$.
-      \item \label{item:YaXb_ffi}
-            The inverse of $\ff(x)$ is $\fg_1(y)=\ffi(y)=\frac{y-b}{a}$.
-      \item It follows that
-        \begin{align*}
-          \ppy(y)
-            &= \sum_{n=1}^{\xN+1} \frac{\ppx\brp{\fgi_n(y)}}{\abs{\ff'\brp{\fgi_n(y)}}}
-            && \text{by \prefpp{thm:YfX}}
-          \\&= \frac{\ppx\brp{\ffi(y)}}{\abs{\ff'\brp{\ffi(y)}}}
-            && \text{because $\xN=0$}
-          \\&= \frac{\ppx\brp{\ffi(y)}}{\abs{a}}
-            && \text{by \pref{item:YaXb_ffp}}
-          \\&= \frac{1}{\abs{a}}\ppx\brp{\frac{y-b}{a}}
-            && \text{by \pref{item:YaXb_ffi}}
-        \end{align*}
-    \end{enumerate}
-
+  \begin{enumerate}
+    \item \label{item:YaXb_ffp}
+          Note that $\ff(x)=ax+b$ is a \prope{differentiable function} with $\xN=0$ \prope{critical point}s
+          and $\ffp(x)=a$.
+    \item \label{item:YaXb_ffi}
+          The inverse of $\ff(x)$ is $\fg_1(y)=\ffi(y)=\frac{y-b}{a}$.
+    \item It follows that
+      \begin{align*}
+        \ppy(y)
+          &= \sum_{n=1}^{\xN+1} \frac{\ppx\brp{\fgi_n(y)}}{\abs{\ff'\brp{\fgi_n(y)}}}
+          && \text{by \prefpp{thm:YfX}}
+        \\&= \frac{\ppx\brp{\ffi(y)}}{\abs{\ff'\brp{\ffi(y)}}}
+          && \text{because $\xN=0$}
+        \\&= \frac{\ppx\brp{\ffi(y)}}{\abs{a}}
+          && \text{by \pref{item:YaXb_ffp}}
+        \\&= \frac{1}{\abs{a}}\ppx\brp{\frac{y-b}{a}}
+          && \text{by \pref{item:YaXb_ffi}}
+      \end{align*}
+  \end{enumerate}
 \end{proof}
 
 %---------------------------------------
