1/x, x^2, and tan(x) graphics

--- a/common/math/graphics/tan.tex
+++ b/common/math/graphics/tan.tex
@@ -24,12 +24,14 @@
   %-------------------------------------
   % axes
   %-------------------------------------
-  \psaxes[linewidth=0.75pt,linecolor=axis,yAxis=false,ticks=xy,labels=y]{<->}(0,0)(-5.2,-2.5)(5.2,2.5)% x axis
-  \psaxes[linewidth=0.75pt,linecolor=axis,xAxis=false,ticks=xy,labels=y]{<->}(0,0)(-5.2,-2.5)(5.2,2.5)% y axis
+  \psaxes[linewidth=0.75pt,linecolor=axis,yAxis=false,ticks=all,labels=y]{<->}(0,0)(-5.2,-2.5)(5.2,2.5)% x axis
+  \psaxes[linewidth=0.75pt,linecolor=axis,xAxis=false,ticks=all,labels=y]{<->}(0,0)(-5.2,-2.5)(5.2,2.5)% y axis
   %-------------------------------------
   % function plot
   %-------------------------------------
   \multido{\n=-3.141593+3.141593}{3}{%
     \rput( \n, 0){\psplot{-1.15}{1.15}{ x 3.14159265 div 180 mul tan }}%
+    \rput( \n, 0){\psplot[linestyle=dotted,linecolor=blue]{-1.15}{-1.19}{ x 3.14159265 div 180 mul tan }}%
+    \rput( \n, 0){\psplot[linestyle=dotted,linecolor=blue]{ 1.15}{ 1.19}{ x 3.14159265 div 180 mul tan }}%
   }%
 \end{pspicture}%
